# ariac

./: README.md
ariac_msgs/: CMakeLists.txt  package.xml
osrf_gear/: CMakeLists.txt  package.xml
osrf_gear/include/: ConveyorBeltPlugin.hh  ROSConveyorBeltPlugin.hh
osrf_gear/include/osrf_gear/: ROSVacuumGripperPlugin.hh
osrf_gear/models/conveyor_belt_ariac/: model.sdf
osrf_gear/src/: ConveyorBeltPlugin.cc  ROSConveyorBeltPlugin.cc  ROSVacuumGripperPlugin.cc  VacuumGripperPlugin.cc
